@startuml PlaceService

interface Geocoding <<interface>> {
  + display_name : string
  + address : AddressType
}

interface AddressType <<interface>> {
  + city : string
  + country : string
  + postcode : string
  + road : string
}

class PlaceService {
  == constructor ==

  + constructor(
    private <<readonly>> httpClient : HttpClient
    )
  == methods ==

  + reverseGeocoding(
    lat : double,
    lng : double
    ) : Observable<Geocoding>
}

Geocoding *--> AddressType
PlaceService ..> Geocoding
@enduml
